[gd_scene load_steps=4 format=3 uid="uid://dt56xyu45ppuo"]

[ext_resource type="Script" path="res://scenes/opciones.gd" id="1_2qp3l"]
[ext_resource type="Texture2D" uid="uid://b6enrrnknrcgj" path="res://assets/Tilesets/Objects/atras.png" id="1_frxfx"]
[ext_resource type="FontFile" uid="uid://bxvgd8u2woa4k" path="res://assets/Tilesets/Objects/Jersey10-Regular.ttf" id="3_delb1"]

[node name="Opciones" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2qp3l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Atras" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.053
anchor_right = 0.094
anchor_bottom = 0.147
offset_left = -0.00400162
offset_top = -0.0800018
offset_right = -1.066
offset_bottom = -0.919998
icon = ExtResource("1_frxfx")
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.152
anchor_top = 0.1
anchor_right = 0.848
anchor_bottom = 0.9
offset_left = -0.280006
offset_right = 0.279968
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_delb1")
theme_override_font_sizes/font_size = 30
text = "OPCIONES"
horizontal_alignment = 1

[node name="Sonido" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_delb1")
theme_override_font_sizes/font_size = 25
text = "Sonido"

[node name="Controles" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_delb1")
theme_override_font_sizes/font_size = 25
text = "Controles"

[connection signal="pressed" from="CanvasLayer/Panel/Atras" to="." method="_on_atras_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Sonido" to="." method="_on_sonido_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Controles" to="." method="_on_controles_pressed"]
